css cdn for deploy

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AlternanceDiginamicPortfolio</title>
+    <title>Jonathan Littardi recherche une alternance - the portfolio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/marui_128.png" />
+    <link
+      rel="stylesheet"
+      href="https://gistcdn.githack.com/gitSushi/3c6f162f8af81bc379594f54aed0fe14/raw/de0440e198efb13c5bded3b3b88266ea6532729e/menu+alternance.component.css"
+    />
   </head>
   <body>
     <app-root></app-root>
